# RONALD

./: .gitattributes  .gitignore  .gitmodules  JTO_AIRRC_outline.md  JTO_readme.md  MRI-vesselness.dockerfile  MRI_VESSEL_REPORTING.md  README.md  SWIN_UNETR_README.md  bronco_final_pipeline.py  calculate_vesselness_stats.py  check-ratios-airrc.py  compare_airrc_ronald_moltest1.py  compare_skeletons.py  dataset.py  grading.ipynb  grading.py  inference.py  mri-requirements.lock.txt  mri-requirements.txt  mri_vessel_reporting_config.example.json  pyproject.toml  recalculate_lobes_prior.py  recalculate_lobes_totalseg.py  requirements.txt  setup.py  train.py  vessels_pipeline.py
bronco/: bronchovascular_bundle_segmentation.py  lungs_segmentation.py  pipeline.py  run.py  utils.py  utils_bronchi.py  utils_sitk.py  vessel_metrics.py
bronco/io/: ImageInstance.py  utils.py
bronco/io_local/: ImageInstance.py  __init__.py
bronco/modelling/: branch_closing.py  cone_construction.py  densify.py  ellipse.py  fill_gaps.py  kimimaro_graph.py  model_branch.py  oval_construction.py  plane_construction.py  prepare_graph.py  segment_branch.py  smooth_tree.py  visvalingam.py
bronco/preprocessing/: __init__.py  connected_components.py  get_skeleton_model.py  get_thresholds.py  preprocess_lungs.py
bronco/processing/: connected_components.py  gmm_thresholding.py
bronco/segmentation/: __init__.py  airways_segmentation.py  blobs_segmentation.py  bronchovascular_bundle_segmentation.py  lobes_segmentation.py  lungs_segmentation.py  mediastinum_segmentation.py  trachea_segmentation.py  vessel_segmentation.py  (+2 more)
examples/: 01_segmentation.py  02_tree_model.py  03_vessels.py  whole_pipeline.py
ronald/: run.py  utils.py  utils_sitk.py
(+23 files in other folders)
