[project]
name = "bronco"
version = "1.0.0"
description = ""
authors = [
    {name = "Marek Socha",email = "marek.socha@polsl.pl"},
    {name = "Anna Mrukwa", email = "anna.mrukwa@polsl.pl"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "simpleitk (>=2.4.1,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "lungmask (>=0.2.20,<0.3.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numba (>=0.61.0,<0.62.0)",
    "lfs (>=0.2,<0.3)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "itk (>=5.4.3,<6.0.0)",
    "kimimaro (>=5.4.0,<6.0.0)",
    "ctools",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ctools = { workspace = true }
